[build-system]
requires = ["meson-python", "pybind11==2.11.1", "jinja2", "pycparser", "packaging"]
build-backend = "mesonpy"

[project]
name = "spead2"
description = "High-performance SPEAD implementation"
readme = "README.rst"
# TODO: add license-files with COPYING once PEP 639 is supported by meson-python
license = {file = "COPYING.LESSER"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking"
]
dependencies = [
  "numpy>=1.9.2"
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "netifaces",
  "pytest",
  "pytest-asyncio",
  "pytest-timeout"
]
test-numba = [
  "numba",
  "scipy"
]

[project.scripts]
"spead2_send.py" = "spead2.tools.send_asyncio:main"
"spead2_recv.py" = "spead2.tools.recv_asyncio:main"
"spead2_bench.py" = "spead2.tools.bench_asyncio:main"

[[project.authors]]
name = "Bruce Merry"
email = "bmerry@sarao.ac.za"

[project.urls]
Homepage = "https://github.com/ska-sa/spead2"
Repository = "https://github.com/ska-sa/spead2"
Documentation = "https://spead2.readthedocs.io/"
Changelog = "https://spead2.readthedocs.io/en/latest/changelog.html"

[tool.meson-python.args]
# Disable all the binaries that wouldn't get included in the wheel anyway
setup = [
  "-Dtools=disabled",
  "-Dunit_test=disabled",
  "-Dcuda=disabled",
  "-Dgdrapi=disabled",
  "-Dcap=disabled",
  "-Dpython=true",
]
install = ["--tags=python-runtime"]

[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image="manylinux2014"
manylinux-i686-image="manylinux2014"
# The manylinux2014 AArch64 images don't provide cmake, so build 2_28 wheels instead
manylinux-aarch64-image="manylinux_2_28"

# We'd like to show sccache stats (to confirm that it's working) after builds.
# there is no separate after-build in cibuildwheel so we cram it into before-test.
before-test = "sccache --show-stats && pip install -r {package}/requirements.txt -r {package}/requirements-3.12.txt"
test-command = "pytest -v {package}/tests"

[tool.cibuildwheel.linux.config-settings]
# Ensure that all the libraries are enabled. Unfortunately
# -Dauto_features=enabled isn't viable as it also force-enables some
# features that are architecture- or OS-specific rather than relying
# on external libraries.
setup-args = [
  "-Dibv=enabled",
  "-Dmlx5dv=enabled",
  "-Dibv_hw_rate_limit=enabled",
  "-Dpcap=enabled",
  "-Db_lto=true",
  "-Dpython_split_debug=true",
]
builddir = "build-cibuildwheel"

[tool.cibuildwheel.linux]
archs = ["aarch64", "x86_64"]
environment-pass = ["SCCACHE_GHA_ENABLED", "ACTIONS_CACHE_URL", "ACTIONS_RUNTIME_TOKEN"]
before-all = ".ci/before_all_linux.sh"

[tool.cibuildwheel.macos.config-settings]
setup-args = [
  "-Dpcap=enabled",
  "-Db_lto=true",
  "--cross-file=/tmp/cibuildwheel/pcap-cross.ini",
]

[tool.cibuildwheel.macos]
# Note: archs is not set here. before_all only supports one arch at a time,
# and it's set from .github/workflows/test.yml.
before-all = ".ci/before_all_macos.sh"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 100
py_version = 38

[tool.black]
line-length = 100
target-versions = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
select = ["E", "F", "W", "UP", "PYI", "RUF100"]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
files = ["src/spead2", "examples", "tests"]
python_version = "3.8"
