# Copyright 2015, 2017, 2019-2023 National Research Foundation (SARAO)
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = spead2
author = Bruce Merry
author_email = bmerry@sarao.ac.za
url = https://github.com/ska-sa/spead2
long_description = file: README.rst
version = attr: spead2._version.__version__
description = High-performance SPEAD implementation
license = LGPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: System :: Networking

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.9.2
tests_require =
    netifaces
    numba
    pytest
    pytest-asyncio
    pytest-timeout
    scipy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    spead2_send.py = spead2.tools.send_asyncio:main
    spead2_recv.py = spead2.tools.recv_asyncio:main
    spead2_bench.py = spead2.tools.bench_asyncio:main

[options.package_data]
* = py.typed, *.pyi
