nobase_include_HEADERS = \
	spead2/common_bind.h \
	spead2/common_defines.h \
	spead2/common_endian.h \
	spead2/common_features.h \
	spead2/common_flavour.h \
	spead2/common_ibv.h \
	spead2/common_logging.h \
	spead2/common_memcpy.h \
	spead2/common_memory_allocator.h \
	spead2/common_memory_pool.h \
	spead2/common_raw_packet.h \
	spead2/common_ringbuffer.h \
	spead2/common_semaphore.h \
	spead2/common_thread_pool.h \
	spead2/portable_endian.h \
	spead2/recv_heap.h \
	spead2/recv_live_heap.h \
	spead2/recv_mem.h \
	spead2/recv_netmap.h \
	spead2/recv_packet.h \
	spead2/recv_reader.h \
	spead2/recv_ring_stream.h \
	spead2/recv_stream.h \
	spead2/recv_udp_base.h \
	spead2/recv_udp.h \
	spead2/recv_udp_ibv.h \
	spead2/recv_utils.h \
	spead2/send_heap.h \
	spead2/send_packet.h \
	spead2/send_streambuf.h \
	spead2/send_stream.h \
	spead2/send_udp.h \
	spead2/send_udp_ibv.h \
	spead2/send_utils.h
