# Copyright 2016 SKA South Africa
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

nobase_include_HEADERS = \
	spead2/common_bind.h \
	spead2/common_defines.h \
	spead2/common_endian.h \
	spead2/common_features.h \
	spead2/common_flavour.h \
	spead2/common_ibv.h \
	spead2/common_ibv_loader.h \
	spead2/common_ibv_loader_utils.h \
	spead2/common_inproc.h \
	spead2/common_logging.h \
	spead2/common_memcpy.h \
	spead2/common_memory_allocator.h \
	spead2/common_memory_pool.h \
	spead2/common_raw_packet.h \
	spead2/common_ringbuffer.h \
	spead2/common_semaphore.h \
	spead2/common_socket.h \
	spead2/common_thread_pool.h \
	spead2/common_unbounded_queue.h \
	spead2/portable_endian.h \
	spead2/recv_heap.h \
	spead2/recv_inproc.h \
	spead2/recv_live_heap.h \
	spead2/recv_mem.h \
	spead2/recv_netmap.h \
	spead2/recv_packet.h \
	spead2/recv_reader.h \
	spead2/recv_ring_stream.h \
	spead2/recv_stream.h \
	spead2/recv_tcp.h \
	spead2/recv_udp_base.h \
	spead2/recv_udp.h \
	spead2/recv_udp_ibv.h \
	spead2/recv_udp_ibv_mprq.h \
	spead2/recv_udp_pcap.h \
	spead2/recv_utils.h \
	spead2/send_heap.h \
	spead2/send_inproc.h \
	spead2/send_packet.h \
	spead2/send_streambuf.h \
	spead2/send_stream.h \
	spead2/send_udp.h \
	spead2/send_udp_ibv.h \
	spead2/send_utils.h
