# Copyright 2023 National Research Foundation (SARAO)
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

py.install_sources(
  '__init__.py',
  '__init__.pyi',
  'asyncio.py',
  'asyncio.pyi',
  'numba.py',
  'numba.pyi',
  'stream_stat_indices.py',
  'stream_stat_indices.pyi',
  subdir : 'spead2/recv'
)
